syntax = "proto3";

option csharp_namespace = "SwaAndCwa.Services";

package users;

// The greeting service definition.
service UsersSrv {
  rpc GetUsers (Empty) returns (Users);
  rpc GetUser (IdRequest) returns (User);
}

// The request message containing the user's name.
message IdRequest {
  int32 id = 1;
}

message Users {
  repeated User item = 1;
}

message User {
  int32 id = 1;
  string name = 2;
}

message Empty {
}